docs: add distribution channels documentation

--- a/.gitignore
+++ b/.gitignore
@@ -72,6 +72,14 @@ id_rsa*
 *.secret
 node_modules
 
+# npm platform binaries (keep package.json and source)
+npm/darwin-arm64/bin/
+npm/darwin-x64/bin/
+npm/linux-arm64/bin/
+npm/linux-x64/bin/
+npm/linux-x64-musl/bin/
+npm/win32-x64/bin/
+
 # Terraform
 *.tfstate
 *.tfstate.*
