--- a/.cc-audit.yaml
+++ b/.cc-audit.yaml
@@ -54,20 +54,7 @@ ignore:
   # Glob patterns to ignore
   # These directories contain intentionally malicious test content
   patterns:
-    - "examples/bypass-attempts/**"
-    - "examples/exfiltration/**"
-    - "examples/obfuscation/**"
-    - "examples/overpermission/**"
-    - "examples/persistence/**"
-    - "examples/privilege-escalation/**"
-    - "examples/prompt-injection/**"
-    - "examples/secrets/**"
-    - "examples/supply-chain/**"
-    - "examples/edge-cases/**"
-    - "examples/false-positives/**"
-    - "examples/docker/**"
-    - "examples/plugin/**"
-    - "examples/subagent/**"
+    - 'examples/**'
 
   # Include test directories in scan
   include_tests: false
