--- a/deny.toml
+++ b/deny.toml
@@ -32,6 +32,7 @@ allow = [
     "Unicode-DFS-2016",
     "CC0-1.0",
     "Unlicense",
+    "OpenSSL",
 ]
 confidence-threshold = 0.8
 exceptions = []
@@ -40,6 +41,11 @@ exceptions = []
 name = "ring"
 expression = "MIT AND ISC AND OpenSSL"
 license-files = [{ path = "LICENSE", hash = 0xbd0eed23 }]
+
+[[licenses.clarify]]
+name = "aws-lc-sys"
+expression = "ISC AND (Apache-2.0 OR ISC) AND OpenSSL"
+license-files = [{ path = "LICENSE", hash = 0x001c7e6c }]
 
 [bans]
 multiple-versions = "warn"
